DTR-2628 updated before you start headings

--- a/app/views/purchaser/PurchaserBeforeYouStartView.scala.html
+++ b/app/views/purchaser/PurchaserBeforeYouStartView.scala.html
@@ -28,7 +28,7 @@
 
 @layout(pageTitle = titleNoForm(messages("purchaser.beforeStart.title"))) {
     @caption(messages("site.purchaser.caption"))
-    @h1(messages("site.purchaser.caption"))
+    @h1(messages("site.beforeYouStart.heading"))
 
     @p(messages("purchaser.beforeStart.p1"))
     @p(messages("purchaser.beforeStart.p2"))
