--- a/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
+++ b/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
@@ -39,8 +39,8 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @caption(messages("site.purchaserAgent.beforeStart.caption"))
-        @h1(messages("purchaserAgent.BeforeYouStart.heading"))
+        @caption(messages("site.purchaserAgent.caption"))
+        @h1(messages("site.beforeYouStart.heading"))
         @p(messages("purchaserAgent.BeforeYouStart.p1"))
         <ul class="govuk-list govuk-list--bullet">
             <li>@messages("purchaserAgent.BeforeYouStart.b1")</li>
