--- a/app/views/vendorAgent/VendorAgentBeforeYouStartView.scala.html
+++ b/app/views/vendorAgent/VendorAgentBeforeYouStartView.scala.html
@@ -40,7 +40,7 @@ caption: Caption
 }
 @caption(messages("site.vendorAgent.caption"))
 
-@h1(messages("vendorAgent.BeforeYouStart.heading"))
+@h1(messages("site.beforeYouStart.heading"))
 
 @p(messages("vendorAgent.BeforeYouStart.p1"))
 @p(messages("vendorAgent.BeforeYouStart.p2"))
