--- a/app/views/vendorAgent/VendorAgentsReferenceView.scala.html
+++ b/app/views/vendorAgent/VendorAgentsReferenceView.scala.html
@@ -29,22 +29,23 @@
 
 @(form: Form[_], agentName: String, mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("agent.agentsReference.title"))) {
+@layout(pageTitle = title(form, messages("vendorAgent.agentsReference.title"))) {
 
-    @formHelper(action = controllers.vendor.routes.VendorAgentsReferenceController.onSubmit(mode)) {
+    @formHelper(action = controllers.vendorAgent.routes.VendorAgentsReferenceController.onSubmit(mode)) {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @caption(messages("site.vendor.caption"))
+        @caption(messages("site.vendorAgent.caption"))
 
         @govukInput(
             InputViewModel(
                 field = form("agentReference"),
-                label = LabelViewModel(messages("agent.agentsReference.heading", agentName)).asPageHeading(size = Large)
+                label = LabelViewModel(messages("vendorAgent.agentsReference.heading", agentName)).asPageHeading(size = Large)
             )
-            .withWidth(Full)
+            .withWidth(Fixed20)
+            .withHint(HintViewModel(HtmlContent(Html(messages("vendorAgent.reference.hint")))))
         )
 
         @govukButton(
