--- a/app/views/vendorAgent/VendorAgentsReferenceView.scala.html
+++ b/app/views/vendorAgent/VendorAgentsReferenceView.scala.html
@@ -45,7 +45,7 @@
                 label = LabelViewModel(messages("vendorAgent.agentsReference.heading", agentName)).asPageHeading(size = Large)
             )
             .withWidth(Fixed20)
-            .withHint(HintViewModel(HtmlContent(Html(messages("vendorAgent.reference.hint")))))
+            .withHint(HintViewModel(HtmlContent(Html(messages("vendorAgent.agentsReference.reference.hint")))))
         )
 
         @govukButton(
