DTR-2418 what is the property type

--- a/app/views/land/LandBeforeYouStartView.scala.html
+++ b/app/views/land/LandBeforeYouStartView.scala.html
@@ -54,6 +54,6 @@
 
     @govukButton(
         ButtonViewModel(messages("site.continue"))
-        .asLink(controllers.routes.ReturnTaskListController.onPageLoad().url)
+        .asLink(controllers.land.routes.LandTypeOfPropertyController.onPageLoad(NormalMode).url)
     )
 }
