--- a/app/views/preliminary/CheckYourAnswersView.scala.html
+++ b/app/views/preliminary/CheckYourAnswersView.scala.html
@@ -15,19 +15,23 @@
  *@
 
 @import views.html.components.h1
+@import views.html.components.Caption
 
 @this(
         layout: templates.Layout,
         govukSummaryList: GovukSummaryList,
         govukButton: GovukButton,
         formHelper: FormWithCSRF,
-        h1: h1
+        h1: h1,
+        caption: Caption
 )
 
 @(list: SummaryList)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("prelim.checkYourAnswers.title"))) {
     @formHelper(action = controllers.preliminary.routes.CheckYourAnswersController.onSubmit()) {
+
+        @caption(messages("site.prelim.caption"))
 
         @h1(messages("site.checkYourAnswers.heading"))
 
