--- a/app/views/preliminary/PurchaserIsIndividualView.scala.html
+++ b/app/views/preliminary/PurchaserIsIndividualView.scala.html
@@ -16,14 +16,16 @@
 
 @import models.prelimQuestions.CompanyOrIndividualRequest
 @import views.html.components.h1
+@import views.html.components.Caption
 
 @this(
-    layout: templates.Layout,
-    formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
-    govukRadios: GovukRadios,
-    govukButton: GovukButton,
-    h1: h1
+        layout: templates.Layout,
+        formHelper: FormWithCSRF,
+        govukErrorSummary: GovukErrorSummary,
+        govukRadios: GovukRadios,
+        govukButton: GovukButton,
+        h1: h1,
+        caption: Caption
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -35,6 +37,8 @@
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
         }
+
+        @caption(messages("site.prelim.caption"))
 
         @govukRadios(
             RadiosViewModel(
