--- a/app/views/preliminary/TransactionTypeView.scala.html
+++ b/app/views/preliminary/TransactionTypeView.scala.html
@@ -16,13 +16,15 @@
 
 @import models.prelimQuestions.TransactionType
 @import viewmodels.LegendSize.Large
+@import views.html.components.Caption
 
 @this(
-    layout: templates.Layout,
-    formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
-    govukRadios: GovukRadios,
-    govukButton: GovukButton
+        layout: templates.Layout,
+        formHelper: FormWithCSRF,
+        govukErrorSummary: GovukErrorSummary,
+        govukRadios: GovukRadios,
+        govukButton: GovukButton,
+        caption: Caption
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -32,14 +34,16 @@
     @formHelper(action = controllers.preliminary.routes.TransactionTypeController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
         }
+
+        @caption(messages("site.prelim.caption"))
 
         @govukRadios(
             RadiosViewModel(
-                field  = form("value"),
+                field = form("value"),
                 legend = LegendViewModel(messages("prelim.transactionType.heading")).asPageHeading(size = Large),
-                items  = TransactionType.options
+                items = TransactionType.options
             )
         )
 
