DTR-2999 Add Notification banners for update and create, refactor VendorCheckYourAnswersController

--- a/app/views/purchaser/PurchaserOverview.scala.html
+++ b/app/views/purchaser/PurchaserOverview.scala.html
@@ -38,7 +38,10 @@
         redirect: Call,
         form: Form[_],
         mode: Mode,
-        errorCalc: Boolean
+        errorCalc: Boolean,
+        isMainPurchaserComplete: Boolean,
+        mainPurchaserId: Option[String] = None,
+        mainPurchaserName: Option[String] = None
 )(
         implicit request: Request[_],
         messages: Messages
@@ -59,11 +62,65 @@
         )
     }
 
+    @(mainPurchaserId, isMainPurchaserComplete) match {
+        case (Some(purchaserId), false) => {
+            @govukNotificationBanner(
+                NotificationBanner(
+                    content = HtmlContent(s"""
+                        <p class="govuk-notification-banner__heading">
+                            ${messages("purchaser.purchaserOverview.mainPurchaserIncomplete.part1")}
+                            <a class="govuk-notification-banner__link" href="${controllers.purchaser.routes.PurchaserOverviewController.changePurchaser(purchaserId).url}">
+                                ${messages("purchaser.purchaserOverview.mainPurchaserIncomplete.part2", mainPurchaserName.getOrElse(messages("site.purchaser.aPurchaser")))}
+                            </a>.
+                        </p>
+                        """)
+                )
+            )
+        }
+        case _ => {}
+    }
+
     @request.flash.get("purchaserDeleted").map { purchaserName =>
         @govukNotificationBanner(
             NotificationBanner(
                 title = messages("site.success"),
-                content = HtmlContent(s"""<h3 class="govuk-notification-banner__heading">${messages("purchaser.purchaserOverview.purchaserRemoved", if(!purchaserName.isBlank) then purchaserName else messages("purchaser.purchaserOverview.aPurchaser"))}</h3>"""),
+                content = HtmlContent(s"""<h3 class="govuk-notification-banner__heading">${messages("site.overview.removed", if(!purchaserName.isBlank) then purchaserName else messages("site.purchaser.aPurchaser"))}</h3>"""),
+                bannerType = Some("success"),
+                role = Some("alert")
+            )
+        )
+    }
+
+    @request.flash.get("purchaserCreated").map { purchaserName =>
+        @govukNotificationBanner(
+            NotificationBanner(
+                title = messages("site.success"),
+                content = HtmlContent(
+                    s"""<h3 class="govuk-notification-banner__heading">${
+                        messages(
+                            "site.overview.created",
+                            if(!purchaserName.isBlank) purchaserName else messages("site.purchaser.aPurchaser")
+                        )
+                    }</h3>"""
+                ),
+                bannerType = Some("success"),
+                role = Some("alert")
+            )
+        )
+    }
+
+    @request.flash.get("purchaserUpdated").map { purchaserName =>
+        @govukNotificationBanner(
+            NotificationBanner(
+                title = messages("site.success"),
+                content = HtmlContent(
+                    s"""<h3 class="govuk-notification-banner__heading">${
+                        messages(
+                            "site.overview.updated",
+                            if(!purchaserName.isBlank) purchaserName else messages("site.purchaser.aPurchaser")
+                        )
+                    }</h3>"""
+                ),
                 bannerType = Some("success"),
                 role = Some("alert")
             )
