--- a/app/views/land/LandSendingPlanByPostView.scala.html
+++ b/app/views/land/LandSendingPlanByPostView.scala.html
@@ -14,9 +14,8 @@
  * limitations under the License.
  *@
 
-@import models.land.ConfirmLandOrPropertyAddress
+@import models.land.LandSendingPlanByPost
 @import views.html.components._
-
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -25,34 +24,41 @@
     govukButton: GovukButton,
     h1: h1,
     p: Paragraph,
-    caption: Caption
+    caption: Caption,
+   govukDetails: GovukDetails
 )
 
+@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
-@(form: Form[_], mode: Mode, address1: Option[String], address2: Option[String], address3: Option[String], address4: Option[String], postcode: Option[String])(implicit request: Request[_], messages: Messages)
+@layout(pageTitle = title(form, messages("land.landSendingPlanByPost.title"))) {
 
-@layout(pageTitle = title(form, messages("land.confirmLandOrPropertyAddress.title"))) {
-
-    @formHelper(action = controllers.land.routes.ConfirmLandOrPropertyAddressController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.land.routes.LandSendingPlanByPostController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
         }
 
-        @caption(messages("site.land.caption"))
-        @h1(messages("land.confirmLandOrPropertyAddress.heading"))
-        @p(Seq(address1, address2, address3, address4, postcode).flatten.filter(_.trim.nonEmpty).mkString("<br>"))
+          @caption(messages("site.land.caption"))
+
+          @h1(messages("land.landSendingPlanByPost.heading"))
+
+          @p(messages("land.landSendingPlanByPost.p"))
+
+          @govukDetails(Details(
+          summary = messages("land.landSendingPlanByPost.change.link"),
+          content = HtmlContent(messages("land.landSendingPlanByPost.change.link.content"))
+          ))
 
         @govukRadios(
             RadiosViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("land.confirmLandOrPropertyAddress.isThisTheLand")).asPageSubHeading(),
-                items  = ConfirmLandOrPropertyAddress.options
+                legend = LegendViewModel(""),
+                items  = LandSendingPlanByPost.options
             )
         )
 
         @govukButton(
-            ButtonViewModel(messages("site.continue"))
+            ButtonViewModel(messages("site.save.continue"))
         )
     }
 }
